--- a/electron/wallpaper/static/style/style.css
+++ b/electron/wallpaper/static/style/style.css
@@ -30,8 +30,13 @@
 }
 body {
 	font-family: 'PingFang-SC-Regular';
+	width: 100vw;
+	height: 100vh;
+	padding: 20px;
+	box-sizing: border-box;
+	overflow: hidden;
 }
-	* {
-			margin: 0;
-			padding: 0;
-		}
+* {
+	margin: 0;
+	padding: 0;
+}
