--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -11,6 +11,12 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 a {
 	font-weight: 500;
 	color: #646cff;
@@ -22,10 +28,14 @@ a:hover {
 
 body {
 	margin: 0;
-	display: flex;
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+}
+
+#app {
+	height: 100vh;
+	padding: 10px;
 }
 
 h1 {
